# lat

./: .gitignore  LICENSE  Makefile  README.md  abstract.tex  contents.tex  data.mk  preamble.tex  pyproject.toml  setup.py  time.nw
doc/: Makefile  contents.tex  data.mk  notes.tex  preamble.tex  slides.tex
docker/: Dockerfile  Makefile
results/: .gitignore  Makefile  preamble.tex  results.nw
src/lat/: .gitignore  Makefile  lat.nw
src/lat/cli/: .gitignore  Makefile  cli.nw  grades.nw  time.nw
src/latools/: .gitignore  Makefile  grades.nw
src/latools/cli/: .gitignore  Makefile  cli.nw
