[tool.poetry]
name = "lat"
version = "0.1"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
description = "Learning Analytics Tools"
readme = "README.md"
repository = "https://github.com/dbosk/latools"
documentation = "https://github.com/dbosk/latools/releases"
include = ["*.py"]
exclude = ["*.tex", "*.nw"]

[tool.poetry.scripts]
lat = "lat.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
argcomplete = "^1.12.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
